--- a/web/index.html
+++ b/web/index.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+  <!-- Set base href to match your repository name -->
+  <base href="/COMP4768-A1-DEMO/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -31,8 +19,19 @@
 
   <title>my_flutter_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Flutter initialization -->
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      if (window.location.pathname.endsWith('/COMP4768-A1-DEMO/')) {
+        window.location.href = window.location.pathname + 'index.html';
+      }
+    });
+  </script>
 </head>
 <body>
+  <!-- This script loads flutter_bootstrap.js which then loads main.dart.js -->
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
